# Android-Clong-Dict

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/edu/cmu/androidstuco/clongdict/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hxj.toml
app/src/main/java/edu/cmu/androidstuco/clongdict/: BrowseFragment.java  ClongDictApplication.kt  ConWord.java  ConWord.kt  DictAdapter.java  DictEntry.java  DictionaryRepository.kt  EditActivity.java  EditPronunciationUi.kt  EntryFragment.java  FirstFragment.java  HomeFragment.java  LingUtils.java  (+10 more)
app/src/main/res/drawable/: side_nav_bar.xml
app/src/main/res/layout/: activity_edit.xml  activity_edit2.xml  activity_main.xml  activity_search.xml  app_bar_main.xml  content_main.xml  content_scrolling.xml  dict_entry.xml  fragment_first.xml  fragment_home.xml  fragment_second.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_main.xml  menu_search.xml  pronunciation_apply_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml  searchable.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/clong_ime_jni/: Cargo.toml
rust/clong_ime_jni/src/: lib.rs
rust/semantic_search_jni/: Cargo.toml
rust/semantic_search_jni/src/: disk_cache.rs  lib.rs
(+20 files in other folders)
