# Rust workspace for Android JNI libraries (see app/build.gradle).
#
# Build from this directory:
#   cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 -o ../app/src/main/jniLibs build --release -p clong_ime_jni
#
# Requires: rustup targets + `cargo install cargo-ndk`, ANDROID_SDK_ROOT (NDK auto-detected).

[workspace]
resolver = "2"
members = ["clong_ime_jni"]
