[package]
name = "semantic_search_jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "semantic_search_jni"

[dependencies]
anyhow = "1"
bincode = "1.3"
jni = "0.21.1"
ndarray = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"